--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,11 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
-/android
-/web
-/macos
-/linux
-/ios
-/windows
+android/
+ios/
+linux/
+mac/
+windows/
+web/
+build/
+macos/
